Moved xml files for testing single motor hardware into wg_robot_description/motor_tests. Renamed RosGazeboNode dependent models to robot_rosgazebo.world. New pr2_xml.model contains information for the new actuator array plugins. Moved obsolete robot and pr2 model files into world/tests directory. Renamed main robot description files: actuators.xml, transmissions.xml, controllers.xml, pr2.xml. controllers_gazebo.xml : new gazebo_actuators plugin controllers_gazebo_rosgazebo.xml : old Pr2_Actarray plugin Updated 2dnav-gazebo demos accordingly, removed botherder starting from xmls, seems to be causing crashes.
git-svn-id: https://svn.code.sf.net/p/personalrobots/code/pkg/trunk@2948 f5854215-dd47-0410-b2c4-cdd35faa7885

--- a/robot_descriptions/wg_robot_description/README
+++ b/robot_descriptions/wg_robot_description/README
@@ -12,17 +12,17 @@ Be advised the code is still the most up-to-date documentation.
 and dynamics users should refer to this document for information and
 naming conventions.
 
-  controller_test.xml contains the most up-to-date controller xml file
+  controllers.xml contains the most up-to-date controller xml file
 for the entire robot.  Controller designers should refer to this xml
 file for creating controller architectures.
 
-  actuator_test.xml contains the most up-to-date xml file for the
+  actuators.xml contains the most up-to-date xml file for the
 complete list of actuators in the PR2 robot.  This list should reflect
 actual hardware components for the PR2 robot.
 
-  transmission_test.xml contains the most up-to-date transmission
+  transmissions.xml contains the most up-to-date transmission
 descriptions for the PR2 robot.  This list describes how joints
-described in pr2.xml are related to actuators in actuator_test.xml.
+described in pr2.xml are related to actuators in actuators.xml.
 
   The current parser for the robot description files is located in
 
