Added optimization flags to CMakeLists.txt. Added least distance functor that cuts off calculation when it exceeds the current least distance, but it seems not to give any speedup for signatures.
git-svn-id: https://svn.code.sf.net/p/personalrobots/code/pkg/trunk@4421 f5854215-dd47-0410-b2c4-cdd35faa7885

--- a/vision/calonder_descriptor/README
+++ b/vision/calonder_descriptor/README
@@ -1,13 +1,16 @@
 Dependencies:
   - OpenCV
-  - Boost (headers only for the library)
-    The Makefiles assume $BOOST_ROOT is set appropriately.
-    Some programs in src/test/ require Boost.ProgramOptions and
-    Boost.Filesystem binary libraries.
-  - GSL (could be removed)
-    sudo apt-get install libgsl0 libgsl0-dev
+  - Boost (headers only)
 
-The top-level Makefile builds libsignatures.so in lib/.
+Optional dependencies:
+  - GSL
+    sudo apt-get install libgsl0 libgsl0-dev
+    Used for random number generation during training. If HAVE_GSL
+    is not defined, uses Boost.Random instead.
+  - Boost.ProgramOptions, Boost.Filesystem (binaries)
+    Required by some programs in src/test/.
+
+The top-level Makefile builds libcalonder.so in lib/.
 
 example/example.cpp shows how to detect keypoints, compute their
 signatures, and match them.
