--- a/drivers/simulator/gazebo_plugin/doc.dox
+++ b/drivers/simulator/gazebo_plugin/doc.dox
@@ -1,5 +1,6 @@
 /**
 @mainpage
+
 @htmlinclude manifest.html
 
 Here are the gazebo plugins which are currently implemented:
@@ -10,6 +11,9 @@ Here are the gazebo plugins which are currently implemented:
  \li \ref gazebo::Ros_Block_Laser "ROS Block Laser Scanner Plugin"
  \li \ref gazebo::Ros_PTZ "ROS PTZ Camera Plugin"
  \li \ref gazebo::P3D "ROS Ground Truth Broadcaster"
+
+
+ @image html gazebo_mcn.jpg "Gazebo Mechanism Control Model"
 
 @section usage Quick Start Guide
 \li If you have successfully \e rosmake \e 2dnav-gazebo, you have EVERYTHING needed to run all simulator+PR2 demos. Otherwise, to compile a minimum set of packages for running Gazebo:
@@ -22,27 +26,35 @@ Here are the gazebo plugins which are currently implemented:
 \li Here is a simple launch script that starts Gazebo:
   @verbatim
   <launch>
+    <!-- automatically start a new master if none active -->
     <master auto="start">
+    <!-- if needed, group tag allows pushing components into namespace via attribute ns="namespace" -->
     <group name="wg">
+      <!-- assign environment variables for gazebo and startup gazebo with argument containing the world file.  -->
       <node pkg="gazebo" type="gazebo" args="-n $(find gazebo_robot_description)/world/robot.world" respawn="false" output="screen">
         <env name="LD_LIBRARY_PATH" value="$(find gazebo_plugin)/lib:$(find gazebo)/gazebo/lib:$(find Cg)/Cg/lib:$LD_LIBRARY_PATH" />
         <env name="GAZEBO_RESOURCE_PATH" value="$(find gazebo_robot_description)/world" />
         <env name="OGRE_RESOURCE_PATH" value="$(find ogre)/ogre/lib/OGRE" />
         <env name="MC_RESOURCE_PATH" value="$(find gazebo_robot_description)/world" />
       </node>
-    </group>
+     </group>
   </launch>
   @endverbatim
   see <a href="http://pr.willowgarage.com/wiki/roslaunch">roslaunch</a> for more details.
 
  - To start a mechanism::MechanismControlNode and spawn some controllers, you have to first send \b pr2.xml to the parameter server, then invoke \b mech.py with the controllers xml configuration file as the argument to spawn controllers:
   @verbatim
+      <!-- send pr2.xml to parameter server as a string, allow retrieval by various components whe needs it
+           (Mechanism Control, BaseControllerNode, etc...) -->
       <param name="robotdesc/pr2" command="$(find wg_robot_description_parser)/merge &quot;$(find wg_robot_description)/pr2/pr2.xml&quot;" />
+      <!-- use mech.py to spawn all controllers listed in controllers.xml -->
       <node pkg="mechanism_control" type="mech.py" args="sp $(find wg_robot_description)/pr2/controllers.xml" respawn="false" output="screen" />
   @endverbatim
 
  - The following \b control.py node sends a \e set_profile command of 46 to the \b tilt_laser_controller:
   @verbatim
+      <!-- start tilting Hokuyo laser by sending it a preset code of 46, this means sawtooth profile sweep.
+           for details of the profile, rates, see controller::LaserScannerControllerNode. -->
       <node pkg="robot_mechanism_controllers" type="control.py" args="set tilt_laser_controller 46" respawn="false" output="screen" />
   @endverbatim
 
