more doc updates.
git-svn-id: https://svn.code.sf.net/p/personalrobots/code/pkg/trunk@4853 f5854215-dd47-0410-b2c4-cdd35faa7885

--- a/drivers/simulator/gazebo_plugin/doc.dox
+++ b/drivers/simulator/gazebo_plugin/doc.dox
@@ -410,7 +410,7 @@ namespace gazebo
 
     /// \brief A mutex to lock access to fields that are used in message callbacks
     private: ros::thread::mutex lock_;
-    /// \brief pointer to ros node
+    /// \brief pointer to ROS node
     ros::node *rosnode_;
     rostools::Time my_message_;
 
