--- a/drivers/simulator/gazebo_plugin/doc.dox
+++ b/drivers/simulator/gazebo_plugin/doc.dox
@@ -276,100 +276,56 @@ Here are the gazebo plugins which are currently implemented:
 Various dynamically loaded plugins have been outfitted for PR2.
 Below are the ROS messages actively used by PR2 simulation as described by launch script \b roslaunch \b ros-pkg/robot_descriptions/gazebo_robot_description/pr2_gazebo_actuators.xml.
 
- - ROS topics published by the simulator
+ - ROS topics published directly by the simulator plugins
      <table border="1">
-     <tr><th>  Component    </th>  <th>  Topic Name                          </th> <th> Message Type                         </th>  <th> Plugin Name             </th> </tr>
-     <tr><th>  images       </th>  <th> wrist_left/image                     </th> <th>  std_msgs::Image.msg                 </th>  <th>  Ros_Camera.hh          </th> </tr>
-     <tr><th>  images       </th>  <th> wrist_right/image                    </th> <th>  std_msgs::Image.msg                 </th>  <th>  Ros_Camera.hh          </th> </tr>
-     <tr><th>  images       </th>  <th> forearm_left/image                   </th> <th>  std_msgs::Image.msg                 </th>  <th>  Ros_Camera.hh          </th> </tr>
-     <tr><th>  images       </th>  <th> forearm_right/image                  </th> <th>  std_msgs::Image.msg                 </th>  <th>  Ros_Camera.hh          </th> </tr>
-     <tr><th>  images       </th>  <th> axis_right/image                     </th> <th>  std_msgs::Image.msg                 </th>  <th>  Ros_Camera.hh          </th> </tr>
-     <tr><th>  images       </th>  <th> axis_left/image                      </th> <th>  std_msgs::Image.msg                 </th>  <th>  Ros_Camera.hh          </th> </tr>
-     <tr><th>  images       </th>  <th> stereo_left/image                    </th> <th>  std_msgs::Image.msg                 </th>  <th>  Ros_Camera.hh          </th> </tr>
+     <tr><th>  Topic Name                          </th> <th> Message Type                         </th>  <th> Plugin Name             </th> <th>  Description                                               </th>  </tr>
+     <tr><td> \b wrist_left/image                     </td> <td>  std_msgs::Image.msg                 </td>  <td>  Ros_Camera.hh          </td> <td>  Images from left wrist camera.                            </th>  </tr>
+     <tr><td> \b wrist_right/image                    </td> <td>  std_msgs::Image.msg                 </td>  <td>  Ros_Camera.hh          </td> <td>  Images from right wrist camera.                           </td>  </tr>
+     <tr><td> \b forearm_left/image                   </td> <td>  std_msgs::Image.msg                 </td>  <td>  Ros_Camera.hh          </td> <td>  Images from left forearm camera.                          </td>  </tr>
+     <tr><td> \b forearm_right/image                  </td> <td>  std_msgs::Image.msg                 </td>  <td>  Ros_Camera.hh          </td> <td>  Images from right forearm camera.                         </td>  </tr>
+     <tr><td> \b axis_right/image                     </td> <td>  std_msgs::Image.msg                 </td>  <td>  Ros_Camera.hh          </td> <td>  Images from left axis PTZ camera.                         </td>  </tr>
+     <tr><td> \b axis_left/image                      </td> <td>  std_msgs::Image.msg                 </td>  <td>  Ros_Camera.hh          </td> <td>  Images from right axis PTZ camera.                        </td>  </tr>
+     <tr><td> \b stereo_left/image                    </td> <td>  std_msgs::Image.msg                 </td>  <td>  Ros_Camera.hh          </td> <td>  Images from left stereo camera.                           </td>  </tr>
 
-     <tr><th>  scans        </th>  <th> base_scan                            </th> <th>  std_msgs::LaserScan.msg             </th>  <th>  Ros_Laser.hh           </th> </tr>
-     <tr><th>  scans        </th>  <th> tilt_scan                            </th> <th>  std_msgs::LaserScan.msg             </th>  <th>  Ros_Laser.hh           </th> </tr>
+     <tr><td> \b base_scan                            </td> <td>  std_msgs::LaserScan.msg             </td>  <td>  Ros_Laser.hh           </td> <td>  Laser scans from Hokuyo at the base.                      </td>  </tr>
+     <tr><td> \b tilt_scan                            </td> <td>  std_msgs::LaserScan.msg             </td>  <td>  Ros_Laser.hh           </td> <td>  Laser scans from tilting Hokuyo.                          </td>  </tr>
 
-     <tr><th> point_clouds  </th>  <th> full_cloud                           </th> <th>  std_msgs::PointCloudFloat32.msg     </th>  <th>  Ros_Block_Laser.hh     </th> </tr>
+     <tr><td> \b full_cloud                           </td> <td>  std_msgs::PointCloudFloat32.msg     </td>  <td>  Ros_Block_Laser.hh     </td> <td>  Simulated point clouds data from stereo camera.           </td>  </tr>
 
-     <tr><th> battery       </th>  <th> battery_state                        </th> <th>  robot_msgs::BatteryStzte            </th>  <th>  gazebo_battery.h       </th> </tr>
-     <tr><th> battery       </th>  <th> diagnostic                           </th> <th>  robot_msgs::DiagnosticMessage       </th>  <th>  gazebo_battery.h       </th> </tr>
+     <tr><td> \b battery_state                        </td> <td>  robot_msgs::BatteryStzte            </td>  <td>  gazebo_battery.h       </td> <td> Simulated battery state.                                   </td>  </tr>
+     <tr><td> \b diagnostic                           </td> <td>  robot_msgs::DiagnosticMessage       </td>  <td>  gazebo_battery.h       </td> <td> Simulated battery diagnostic messages.                     </td>  </tr>
 
-     <tr><th> ground truths </th>  <th> base_pose_ground_truth               </th> <th>  std_msgs::TransformWithRateStamped  </th>  <th> P3D.hh                  </th> </tr>
-     <tr><th> ground truths </th>  <th> gripper_roll_right_pose_ground_truth </th> <th>  std_msgs::TransformWithRateStamped  </th>  <th> P3D.hh                  </th> </tr>
-     <tr><th> ground truths </th>  <th> gripper_roll_left_pose_ground_truth  </th> <th>  std_msgs::TransformWithRateStamped  </th>  <th> P3D.hh                  </th> </tr>
-     <tr><th> ground truths </th>  <th> finger_tip_l_left_ground_truth       </th> <th>  std_msgs::TransformWithRateStamped  </th>  <th> P3D.hh                  </th> </tr>
-     <tr><th> ground truths </th>  <th> finger_tip_r_left_ground_truth       </th> <th>  std_msgs::TransformWithRateStamped  </th>  <th> P3D.hh                  </th> </tr>
-     <tr><th> ground truths </th>  <th> finger_tip_l_right_ground_truth      </th> <th>  std_msgs::TransformWithRateStamped  </th>  <th> P3D.hh                  </th> </tr>
-     <tr><th> ground truths </th>  <th> finger_tip_R_right_ground_truth      </th> <th>  std_msgs::TransformWithRateStamped  </th>  <th> P3D.hh                  </th> </tr>
-     <tr><th> PTZ cameras   </th>  <th> axis_right/ptz_state                 </th> <th>  std::string                         </th>  <th> Ros_PTZ.hh              </th> </tr>
-     <tr><th> PTZ cameras   </th>  <th> axis_left/ptz_state                  </th> <th>  std::string                         </th>  <th> Ros_PTZ.hh              </th> </tr>
-     <tr><th> time          </th>  <th> time                                 </th> <th>  rostools::Time                      </th>  <th> Ros_Time.hh             </th> </tr>
-     </table border><br>
- - ROS topics published by mechanism control node
-  - mechanism state:
-   - \b mechanism_state, mechanism_control::MechanismState, mechanism_control.h
-  - frame transforms:
-   - \b TransformArray, rosTF::TransformArray, mechanism_control.h
- - ROS topics published by controllers
-  - base controller:
-   - \b odom
- - ROS topics subscribed by controllers
-  - base controller:
-   - \e cmd_vel
-  - PTZ cameras:
-   - \e axis_right/ptz_cmd
-   - \e axis_left/ptz_cmd
-  - arm position controllers:
-   - \e left_arm_commands
-   - \e right_arm_commands
-  - joint position controllers:
-   - \e left_gripper_commands
-   - \e right_gripper_commands
-   - \e head_pan_commands
-   - \e head_tilt_commands
- - ROS service published by the simulator
-  - battery:
-   - \b full_charge_energy
- - ROS service subscribed by the simulator
-  - battery:
-   - \e timeout
-   - \e diagnostic_rate
-   - \e battery_state_rate
- - ROS service publsihed by mechanism control
-  - mechanism control node:
-   - \b list_controllers
-   - \b list_controller_types
-   - \b spawn_controller
-   - \b kill_controller
- - ROS service published by controllers
-  - base controller node:
-   - \b base_controller/set_command
-   - \b base_controller/get_actual
-  - joint position controller node:
-   - \b torso_controller/set_command
-   - \b torso_controller/get_actual
-   - \b gripper_left_controller/set_command
-   - \b gripper_left_controller/get_actual
-   - \b gripper_right_controller/set_command
-   - \b gripper_right_controller/get_actual
-   - \b head_pan_controller/set_command
-   - \b head_pan_controller/get_actual
-   - \b head_tilt_controller/set_command
-   - \b head_tilt_controller/get_actual
-  - laser scanner controller
-   - \b tilt_laser_controller/set_command
-   - \b tilt_laser_controller/get_actual
-   - \b tilt_laser_controller/set_profile
-  - arm position controller node:
-   - \b left_arm_controller/set_command
-   - \b left_arm_controller/set_command_array
-   - \b left_arm_controller/get_command
-   - \b left_arm_controller/set_target
-   - \b right_arm_controller/set_command
-   - \b right_arm_controller/set_command_array
-   - \b right_arm_controller/get_command
-   - \b right_arm_controller/set_target
+     <tr><td> \b base_pose_ground_truth               </td> <td>  std_msgs::TransformWithRateStamped  </td>  <td> P3D.hh                  </td> <td> Ground truth from the base, theoretical exact odometry.    </td>  </tr>
+     <tr><td> \b gripper_roll_right_pose_ground_truth </td> <td>  std_msgs::TransformWithRateStamped  </td>  <td> P3D.hh                  </td> <td> Ground truth from center of right gripper_roll link.       </td>  </tr>
+     <tr><td> \b gripper_roll_left_pose_ground_truth  </td> <td>  std_msgs::TransformWithRateStamped  </td>  <td> P3D.hh                  </td> <td> Ground truth from center of left gripper_roll link.        </td>  </tr>
+     <tr><td> \b finger_tip_l_left_ground_truth       </td> <td>  std_msgs::TransformWithRateStamped  </td>  <td> P3D.hh                  </td> <td> Ground truth from center of left finger tip on left arm.   </td>  </tr>
+     <tr><td> \b finger_tip_r_left_ground_truth       </td> <td>  std_msgs::TransformWithRateStamped  </td>  <td> P3D.hh                  </td> <td> Ground truth from center of right finger tip on left arm.  </td>  </tr>
+     <tr><td> \b finger_tip_l_right_ground_truth      </td> <td>  std_msgs::TransformWithRateStamped  </td>  <td> P3D.hh                  </td> <td> Ground truth from center of left finger tip on right arm.  </td>  </tr>
+     <tr><td> \b finger_tip_R_right_ground_truth      </td> <td>  std_msgs::TransformWithRateStamped  </td>  <td> P3D.hh                  </td> <td> Ground truth from center of right finger tip on right arm. </td>  </tr>
+     <tr><td> \b axis_right/ptz_state                 </td> <td>  axis_cam::PTZActuatorState          </td>  <td> Ros_PTZ.hh              </td> <td> PTZ cameras actuator positions.                            </td>  </tr>
+     <tr><td> \b axis_left/ptz_state                  </td> <td>  axis_cam::PTZActuatorState          </td>  <td> Ros_PTZ.hh              </td> <td> PTZ cameras actuator positions.                            </td>  </tr>
+     <tr><td> \b time                                 </td> <td>  rostools::Time                      </td>  <td> Ros_Time.hh             </td> <td> Simulation time.                                           </th>  </tr>
+     </table><br>
+ - ROS topics subscribed by the simulator
+     <table border="1">
+     <tr><th>  Topic Name                          </th> <th> Message Type                         </th>  <th> Plugin Name             </th> <th>  Description                                               </th>  </tr>
+     <tr><td> \e axis_left_ptz_cmd                 </td> <td>  axis_cam::PTZActuatorCmd            </td>  <td>  Ros_PTZ.hh             </td> <td>  Actuator commands for PTZ cameras.                        </th>  </tr>
+     <tr><td> \e axis_right_ptz_cmd                </td> <td>  axis_cam::PTZActuatorCmd            </td>  <td>  Ros_PTZ.hh             </td> <td>  Actuator commands for PTZ cameras.                        </th>  </tr>
+     </table><br>
+
+@section param PR2 ROS Parameters
+ - ROS parameters published by the simulator
+     <table border="1">
+     <tr><th>  Parameter Name                      </th> <th> Message Type                         </th>  <th> Plugin Name             </th> <th>  Description                                               </th>  </tr>
+     <tr><td> \b full_charge_energy                </td> <td>  \e Float32                          </td>  <td>  gazebo_battery.h       </td> <td>  Battery state when fully charged in Joules.               </th>  </tr>
+     </table><br>
+ - ROS parameters subscribed by the simulator
+     <table border="1">
+     <tr><th>  Parameter Name                      </th> <th> Message Type                         </th>  <th> Plugin Name             </th> <th>  Description                                               </th>  </tr>
+     <tr><td> \e timeout                           </td> <td>  \e Float32                          </td>  <td>  gazebo_battery.h       </td> <td>  Timeout in seconds. (default=10.0sec)                     </th>  </tr>
+     <tr><td> \e diagnostic_rate                   </td> <td>  \e Float32                          </td>  <td>  gazebo_battery.h       </td> <td>  Broadcast rate in Hz. (default=1.0 Hz)                    </th>  </tr>
+     <tr><td> \e battery_state_rate                </td> <td>  \e Float32                          </td>  <td>  gazebo_battery.h       </td> <td>  Broadcast rate in Hz. (default=1.0 Hz)                    </th>  </tr>
+     </table><br>
 
 @section templates How To Construct Your Own ROS Gazebo Plugin
 Here is a sample code for making a very simple plugin in Gazebo that publishes \c rostools::Time message over a ROS topic.
